--- a/includes/gnl/Makefile
+++ b/includes/gnl/Makefile
@@ -11,23 +11,29 @@
 # **************************************************************************** #
 
 NAME = gnl.a
-FLAGS = -Wall -Wextra -Werror
+
+CFLAGS = -Wall -Wextra -Werror
+
 SRCS =	get_next_line.c \
-		get_next_line_bonus.c \
 		get_next_line_utils.c \
-		get_next_line_utils_bonus.c \
 		
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
 	@:
+
 $(NAME): $(OBJS)
-%.o: %.c get_next_line.h
-	@cc $(FLAGS) -c $< -o $@
-	@ar -rcs $(NAME) $@
+	@ar -rcs $(NAME) $(OBJS) 
+
+%.o: %.c
+	@gcc $(CFLAGS) -c $< -o $@
+
 clean:
 	@rm -rf $(OBJS)
+
 fclean: clean
 	@rm -rf $(NAME)
+
 re: fclean all
-.PHONY:all
+
+.PHONY:all clean fclean re
